<resources>
    <string name="app_name">Time Table Winter 2021</string>
    <string name="time_table">Dhirubhai Ambani Institute of Information and</string>
    <string name="button1">Monday</string>
    <string name="button2">Tuesday</string>
    <string name="button3">Wednesday</string>
    <string name="button4">Thursday</string>
    <string name="button5">Friday</string>
    <string name="button6">Saturday</string>
    <string name="day">Day</string>
    <string name="b0">Subject</string>
    <string name="a2">10:15-11:30</string>
    <string name="a1">8:30-9:45</string>
    <string name="a0">Time Slot</string>
    <string name="a3">12:00-13:15</string>
    <string name="b1">System Software (IT215)</string>
    <string name="b4">Analog Communication and Transmission Line Theory (CT215)</string>
    <string name="a5">16:00-17:00 (Tutorial)</string>
    <string name="b5">Free</string>
    <string name="b3">Environmental Studies (SC209)</string>
    <string name="b2">Analog Circuits (EL213)</string>
    <string name="a4">14:00-16:00 (Lab)</string>
    <string name="tuesday_schedule">TUESDAY SCHEDULE:</string>
</resources>