<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".professor">

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KNOW YOUR PROFESSORS:"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/abril_fatface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="604dp"
        android:layout_marginBottom="75dp"
        android:background="#F1D78B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#0C0C0C"
                android:text="Professor"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/changa_one" />

            <TextView
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#10100F"
                android:text="@string/b0"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/changa_one" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Shruti Bhilare"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b1"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Tapasi Maiti"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b2"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Ranendu Ghosh"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b3"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Sanjeev Gupta"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b4"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Anil Roy"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Engineered Materials (SC221)"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Arnab Ray"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Introductory Computational Physics (SC201)"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Prof. Madhukant Sharma"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:fontFamily="@font/acme" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Probability Statistics and Information Theory (SC222)"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:fontFamily="@font/acme" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>